# ml-engineer-exam

./: .dockerignore  .gitattributes  DEPLOYMENT.md  Dockerfile  README.md  README_EXAM.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/models/: linear.joblib  random_forest.joblib  ridge.joblib
infrastructure/: cloudformation.yaml
src/ml_engineer_exam/: config.py
src/ml_engineer_exam/api/: __init__.py  app.py  model_registry.py  routes.py  schemas.py
src/ml_engineer_exam/model/: __init__.py  utils.py
src/ml_engineer_exam/prediction/: __init__.py
src/ml_engineer_exam/prepare/: __init__.py
src/ml_engineer_exam/scripts/: run_model_training.py  run_prediction.py
tests/: conftest.py
tests/api/: test_api.py
tests/prediction/: test_prediction.py
